# Training_Test

./: .env.example  .gitignore  README.md  free_config.py  main.py  pyproject.toml  setup.sh
